--- a/public/stylesheets/dish.css
+++ b/public/stylesheets/dish.css
@@ -11,6 +11,8 @@
   font-size: medium;
 }
 
+
+
 h1{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: bold;
@@ -84,6 +86,17 @@ h1{
  
 
 }
+
+
+.cardInside3{
+  box-shadow: 10px 10px 5px 0px rgba(170, 167, 167, 0.6);
+  border: 2px solid grey;
+  background-image:  radial-gradient(ellipse at center, rgb(255, 255, 255) 0%, rgb(253, 250, 250) 100%);
+
+  padding: 20px;
+  width:100%;
+
+ }
 
 .cardInsideVal{
   box-shadow: 10px 10px 5px 0px rgba(170, 167, 167, 0.6);
