--- a/views/dish/insertDish.ejs
+++ b/views/dish/insertDish.ejs
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>Document</title>
-
+    <title>Inserción de un plato desde formulario - Jilorio</title>
+    <link rel="shortcut icon" href="https://doorcountypulse.com/wp-content/uploads/2020/03/forkspoon.png">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
