--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/login.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/fondo.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
 </head>
