--- a/views/food/food.ejs
+++ b/views/food/food.ejs
@@ -29,12 +29,12 @@
 
                 <div class="row">
                     <% for (var i=0; i < items.myObject.foodIndex.length; i++) { %>
-                    <div class="col-md-4">
+                    <div class="col-md-4 center-block">
                         <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex">
                                 <i class="<%= items.myObject.foodIndex[i].icon%> fa-3x m-auto text-info"></i>
                             </div>
-                            <h2> <%= items.myObject.foodIndex[i].name %></h2>
+                            <div class="feature features-icons-icon">  <%= items.myObject.foodIndex[i].name %></div>
                             <p class="text-justify"><%= items.myObject.foodIndex[i].description %> </p>
                             <p><a class="btn btn-info" href="#" role="button">Ver más &raquo;</a></p>
                         </div>
