--- a/views/menu/menuDetails.ejs
+++ b/views/menu/menuDetails.ejs
@@ -38,8 +38,8 @@
                 <p class="descriptionDish"> <%= items.myDocs.description %> </p>
             </div>
         </div>
-        <div class="tabTitle">
-            <span><%= items.myObject.platosMenu %></span>
+        <div class="cardInside3">
+            <span class="detailsSpan"><%= items.myObject.platosMenu %></span>
         </div>
 
         <table class="table table-striped table-bordered table-hover table-sm">
@@ -62,8 +62,8 @@
             </tbody>
         </table>
 
-        <div class="tabTitle">
-            <span><%= items.myObject.nutrientsMenu %></span>
+        <div class="cardInside3">
+            <span class="detailsSpan"><%= items.myObject.nutrientsMenu %></span>
         </div>
         <table class="table table-striped table-bordered table-hover table-sm nutrientsTab">
 
