--- a/public/stylesheets/dish.css
+++ b/public/stylesheets/dish.css
@@ -44,12 +44,13 @@ h1{
 }
 
 .cont {
-  min-height: 250px;
+  min-height: 125px;
 }
 
 .edad {
-  font-size: 1.5em;
-  text-align: center;
+  font-size: 1.2em;
+  text-align: left;
+
 }
 
 
@@ -83,15 +84,20 @@ h1{
   background-image:  radial-gradient(ellipse at center, rgb(255, 255, 255) 0%, rgb(253, 250, 250) 100%);
   padding: 20px;
   width:100%;
- 
-
 }
+
+.cardInside2{
+  background-color: rgb(255, 255, 255, 0.85);
+  text-align: center;
+  width:auto;
+  
+ }
 
 
 .cardInside3{
   box-shadow: 10px 10px 5px 0px rgba(170, 167, 167, 0.6);
   border: 2px solid grey;
-  background-image:  radial-gradient(ellipse at center, rgb(255, 255, 255) 0%, rgb(253, 250, 250) 100%);
+  background-image:  radial-gradient(ellipse at center, rgb(255, 255, 255) 0%, rgb(250, 250, 255) 100%);
 
   padding: 20px;
   width:100%;
