--- a/views/dish/dishDetails.ejs
+++ b/views/dish/dishDetails.ejs
@@ -30,10 +30,12 @@
     <div class="container">
         <div class="infoPage">
             <i class="fas fa-list-alt fa-2x"></i>
-            <span> <%= items.myDocs._id %> </span>
+            
+            <span > <%= items.myDocs._id %> </span>
         </div>
         <hr style="border-color: rgb(46, 115, 124); border: 1.5px solid  rgb(46, 115, 124);">
         <div class="row justify-content-between">
+            
             <div class="col-8">
                 <p class="descriptionDish"> <%= items.myDocs.description %> </p>
                 <button type="button" class="btn btn-info"><a title="Ver receta"
@@ -44,8 +46,8 @@
             </div>
         
         </div>
-        <div class="tabTitle">
-            <span><%= items.myObject.ingredientesDish %></span>
+        <div class="cardInside3">
+            <span class="detailsSpan"><%= items.myObject.ingredientesDish %></span>
         </div>
 
         <table class="table table-striped table-bordered table-hover table-sm">
@@ -69,8 +71,8 @@
 
             </tbody>
         </table>
-        <div class="tabTitle">
-            <span><%= items.myObject.nutrients %></span>
+        <div class="cardInside3">
+            <span class="detailsSpan"><%= items.myObject.nutrients %></span>
         </div>
         
                    
