--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,49 +21,54 @@
             <div class="jilorioInfo">
                 <h1 class="display-4"><%= items.myObject.jilorioInfo[0].home.title %></h1>
                 <p><%= items.myObject.jilorioInfo[0].home.description %></p>
-                <p><a class="btn btn-primary btn-lg" href="<%= items.myObject.jilorioInfo[0].home.href %>" role="button"><%= items.myObject.jilorioInfo[0].home.text %> &raquo;</a></p>
+                <p><a class="btn btn-primary btn-lg" href="<%= items.myObject.jilorioInfo[0].home.href %>"
+                        role="button"><%= items.myObject.jilorioInfo[0].home.text %> &raquo;</a></p>
             </div>
         </div>
         <div class="container">
             <section class="features-icons text-center">
-            <div class="row">
-                <% for (var i=0; i< items.myObject.homeIndex.length/2; i++) { %>
-                <div class="col-md-4">
-                    <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3">
-                        <div class="features-icons-icon d-flex">
-                            <i class="<%= items.myObject.homeIndex[i].icon%> fa-3x m-auto text-info"></i>
+                <div class="row">
+                    <% for (var i=0; i< items.myObject.homeIndex.length/2; i++) { %>
+                    <div class="col-md-4">
+                        <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3" style="min-height: 290px;">
+                            <div class="features-icons-icon d-flex">
+                                <i class="<%= items.myObject.homeIndex[i].icon%> fa-3x m-auto text-info"></i>
+                            </div>
+                            <div class="feature features-icons-icon"> <%= items.myObject.homeIndex[i].name %></div>
+                            <p class="text-justify"><%= items.myObject.homeIndex[i].description %> </p>
                         </div>
-                        <h2 class="features-icons-icon"> <%= items.myObject.homeIndex[i].name %></h2>
-                        <p class= "text-justify"><%= items.myObject.homeIndex[i].description %> </p>
-                        <p><a class="btn btn-info" href="<%= items.myObject.homeIndex[i].href %>" role="button"><%= items.myObject.homeIndex[i].text %> &raquo;</a></p>
+                        <p><a class="btn btn-info" href="<%= items.myObject.homeIndex[i].href %>"
+                                role="button"><%= items.myObject.homeIndex[i].text %> &raquo;</a></p>
+
                     </div>
+                    <% } %>
                 </div>
-                <% } %>
-            </div>
 
-            <hr style="border-color: rgb(46, 115, 124);">
+                <hr style="border-color: rgb(46, 115, 124);">
 
-            <div class="row">
-         
-                <% for (var i= items.myObject.homeIndex.length/2; i< items.myObject.homeIndex.length; i++) { %>
-                <div class="col-md-4">
-                    <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3">
-                        <div class="features-icons-icon d-flex">
-                            <i class="<%= items.myObject.homeIndex[i].icon%> fa-3x m-auto text-info"></i>
+                <div class="row">
+
+                    <% for (var i= items.myObject.homeIndex.length/2; i< items.myObject.homeIndex.length; i++) { %>
+                    <div class="col-md-4">
+                        <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3" style="min-height: 240px;">
+                            <div class="features-icons-icon d-flex">
+                                <i class="<%= items.myObject.homeIndex[i].icon%> fa-3x m-auto text-info"></i>
+                            </div>
+                            <div class="feature features-icons-icon"> <%= items.myObject.homeIndex[i].name %></div>
+                            <p class="text-justify"><%= items.myObject.homeIndex[i].description %> </p>
                         </div>
-                        <h2 class="features-icons-icon"> <%= items.myObject.homeIndex[i].name %></h2>
-                        <p class= "text-justify"><%= items.myObject.homeIndex[i].description %> </p>
-                        <p><a class="btn btn-info" href="<%= items.myObject.homeIndex[i].href %>" role="button"><%= items.myObject.homeIndex[i].text %> &raquo;</a></p>
+
+                        <p><a class="btn btn-info" href="<%= items.myObject.homeIndex[i].href %>"
+                                role="button"><%= items.myObject.homeIndex[i].text %> &raquo;</a></p>
                     </div>
+                    <% } %>
                 </div>
-                <% } %>
-            </div>
 
         </div>
-     
+
         </div>
-    </div>
-   
+        </div>
+
     </main>
     <%- include ("partials/footer.ejs"); %>
 </body>
