--- a/views/menu/insertMenuJson.ejs
+++ b/views/menu/insertMenuJson.ejs
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/fondo3.css" />
 
 
     <!-- JQUERY AUTOCOMPLETE -->
@@ -35,7 +36,9 @@
 
 
     <div class="container">
+        <div class="cardInside2">
         <h1><%= items.myObject.menu.title %></h1>
+    </div>
         <%- include ("../partials/message.ejs"); %>
         <div class="cardJson">
             <br>
@@ -70,16 +73,7 @@
     <%- include ("../partials/footer.ejs"); %>
 </body >
 
-<script>
-    $(document).ready(function () {
-        $('#alimentos').DataTable({
-            "language": {
-                "emptyTable": " "
-            }
-        });
 
-    });
-</script>
 
 <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
