--- a/views/planification/insertPlanificationJson.ejs
+++ b/views/planification/insertPlanificationJson.ejs
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/fondo3.css" />
 
 
     <!-- JQUERY AUTOCOMPLETE -->
@@ -35,7 +36,10 @@
 
 
     <div class="container">
+        <div class="cardInside2">
         <h1><%= items.myObject.planificacion.title %></h1>
+    </div>
+    <br>
         <%- include ("../partials/message.ejs"); %>
         <div class="cardJson">
             <br>
