--- a/views/planification/planificationDetails.ejs
+++ b/views/planification/planificationDetails.ejs
@@ -36,8 +36,8 @@
                 <p class="descriptionDish"> <%= items.myDocs.description %> </p>
             </div>
         </div>
-        <div class="tabTitle">
-            <span><%= items.myObject.tablaPlanificacion.titleTabla %></span>
+        <div class="cardInside3">
+            <span class="detailsSpan"><%= items.myObject.tablaPlanificacion.titleTabla %></span>
         </div>
         <% const  nombres_sz=  items.myObject.tablaPlanificacion.nombres.length %>
         <% const  nombres=  items.myObject.tablaPlanificacion.nombres %>
@@ -102,8 +102,8 @@
 
 
 
-        <div class="tabTitle">
-            <span><%= items.myObject.tablaPlanificacion.titleTablaNut %></span>
+        <div class="cardInside3">
+            <span class="detailsSpan"><%= items.myObject.tablaPlanificacion.titleTablaNut %></span>
         </div>
 
         <table class="table table-striped table-bordered table-hover table-sm nutrientsTab">
