--- a/views/recomendation/insertRecomendationJson.ejs
+++ b/views/recomendation/insertRecomendationJson.ejs
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/fondo3.css" />
 
 
     <!-- JQUERY AUTOCOMPLETE -->
@@ -31,12 +32,17 @@
 </head>
 
 <body class="jsonBody">
+    
     <%- include ("../partials/navigation.ejs"); %>
 
 
     <div class="container">
-        <h1><%= items.myObject.recomendacion.title %></h1>
+        <div class="cardInside2">
+            <h1><%= items.myObject.recomendacion.title %></h1>
+        </div>
+        <br>
         <%- include ("../partials/message.ejs"); %>
+        <br>
         <div class="cardJson">
             <br>
 
