--- a/views/recomendation/recomendationDetails.ejs
+++ b/views/recomendation/recomendationDetails.ejs
@@ -34,19 +34,22 @@
             <span> <%= items.myDocs._id %> </span>
         </div>
         <hr style="border-color: rgb(46, 115, 124); border: 1.5px solid  rgb(46, 115, 124);">
-        <div class="cardInside3">
+        
         <div class="row cont justify-content-between">
-            <div class="col-sm">
+            <div class="col-sm " style="margin-right: 100px;" >
                 <p class="descriptionRec"> <%= items.myDocs.description %> </p>
                
             </div>
-            <div class="col-sm">
-                <p class="descriptionRec edad"> <%= items.myDocs.edad %> </p>
+            <div class="col-sm" style="margin-left: 100px; margin-right: 15px; ">
+                <p class="descriptionRec edad">  <%=items.myObject.tablaRecomendacionDetails.edad %> <%= items.myDocs.edad %> </p>
             </div>
         </div>
-    </div>
+ 
     <br><br>
 
+    <div class="cardInside3">
+        <span class="detailsSpan"><%= items.myObject.tablaRecomendacionDetails.title %></span>
+    </div>
         <% if ((items.myObject.tablaRecomendacionDetails.valores.length) > 0) { %>
             <table id="alimentos" class="table table-bordered table-hover table-sm">
                 <thead class="thead-dark">
