--- a/views/recomendation/recomendationInsert.ejs
+++ b/views/recomendation/recomendationInsert.ejs
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/fondo3.css" />
 
 
     <!-- JQUERY AUTOCOMPLETE -->
@@ -35,8 +36,13 @@
 
 
     <div class="container">
-        <h1><%= items.myObject.recomendacion.title %></h1>
+        <div class="cardInside2">
+            <h1><%= items.myObject.recomendacion.title %></h1>
+        </div>
+        <br>
         <%- include ("../partials/message.ejs"); %>
+        <br>
+
 
         <div class="card">
             <p class="nutrientesTitle"> <%= items.myObject.recomendacion.infor %> </p>
