Prueba de heroku

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
