--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -200,7 +200,7 @@ h1 {
   font-weight: bold;
   margin-top: 40px;
   text-align: justify;
-  font-size: 50px;
+  font-size: 4em;
   color: #ffffff;
   text-shadow: 3px 2px 2px rgb(100, 103, 104);
 }
