--- a/views/evaluation/evaluation.ejs
+++ b/views/evaluation/evaluation.ejs
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="https://doorcountypulse.com/wp-content/uploads/2020/03/forkspoon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -20,7 +21,7 @@
     <main role="main">
         <div class="jumbotronEvaluation center-block">
             <div class="jilorioInfo evaluation">
-                <h1 class="display-4"> <%= items.myObject.jilorioInfo[5].evaluation.title %> </h1>
+                <h1 > <%= items.myObject.jilorioInfo[5].evaluation.title %> </h1>
                 <p><%= items.myObject.jilorioInfo[5].evaluation.description%></p>
             </div>
         </div>
