--- a/views/evaluation/evaluation.ejs
+++ b/views/evaluation/evaluation.ejs
@@ -21,7 +21,7 @@
     <main role="main">
         <div class="jumbotronEvaluation center-block">
             <div class="jilorioInfo evaluation">
-                <h1 > <%= items.myObject.jilorioInfo[5].evaluation.title %> </h1>
+                <h1 class="display-4"> <%= items.myObject.jilorioInfo[5].evaluation.title %> </h1>
                 <p><%= items.myObject.jilorioInfo[5].evaluation.description%></p>
             </div>
         </div>
