--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-  <a class="navbar-brand" href="#">𝐉𝐈𝐋𝐎𝐑𝐈𝐎</a>
+  <a class="navbar-brand" href="/">𝐉𝐈𝐋𝐎𝐑𝐈𝐎</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
