--- a/views/menu/getMenu.ejs
+++ b/views/menu/getMenu.ejs
@@ -8,8 +8,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <script defer src="../../public/javascripts/dish.js"></script>
-    
+    <script defer src="../../public/javascripts/dish.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/food.css" />
@@ -29,7 +29,8 @@
             <i class="fas fa-list-alt fa-2x"></i>
             <span> <%= items.myObject.infoPage.menus %> </span>
         </div>
-        <% if (items.req.user.rol === "admin"){ %>
+   
+        <% if ((items.req.user != undefined) && (items.req.user.rol === "admin")){ %>
         <hr style="border-color: rgb(46, 115, 124);">
         <br>
         <form method="POST">
@@ -37,7 +38,7 @@
                 <div class="search">
                     <input type="text" name="_id" class="searchTerm" placeholder="<%= items.myObject.busqueda %>">
                     <a id="submit-form-link" href="#"></a>
-                    <button type="submit"class="spanColor searchButton">
+                    <button type="submit" class="spanColor searchButton">
                         <i class="fa fa-search"></i>
                     </button>
                 </div>
@@ -49,7 +50,7 @@
         <% const  nombres=  items.myObject.tablaMenu.nombres %>
         <% const  docs_sz =   items.myDocs.length %>
         <% const  docs =   items.myDocs %>
-     
+
         <table class="table table-bordered table-striped table-hover table-sm">
             <thead class="thead-dark">
                 <tr>
@@ -61,20 +62,23 @@
             <tbody>
                 <tr>
                     <% for (var i=0; i < docs_sz; i++) { %>
-                        <td> <%= docs[i]._id %> </td>
-                        <td> 
-                    <% for (var j=0; j < docs[i].dishes.length; j++) { %>
-                        <%=docs[i].dishes[j]._id%>  
-                        
-                        <% if( (j+1) < docs[i].dishes.length) {  %> 
-                            <%= "|   "  %>  
-                            <% } %>
-                  
-                    <% } %>
+                    <td> <%= docs[i]._id %> </td>
+                    <td>
+                        <% for (var j=0; j < docs[i].dishes.length; j++) { %>
+                        <%=docs[i].dishes[j]._id%>
+
+                        <% if( (j+1) < docs[i].dishes.length) {  %>
+                        <%= "|   "  %>
+                        <% } %>
+
+                        <% } %>
                     <td><%= items.myNutrientsMenu[i][1] %> </td>
-                    <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/menu/delete/<%=docs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button> 
-                        <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> 
-                        <button type="button" class="btn btn-warning"><a title="Editar" href="/menu/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button></td> 
+                    <td> <button type="button" class="btn btn-danger"><a title="Eliminar"
+                                href="/menu/delete/<%=docs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button>
+                        <button type="button" class="btn btn-info"><a title="Ver detalles"
+                                href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
+                        <button type="button" class="btn btn-warning"><a title="Editar"
+                                href="/menu/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button></td>
                     </td>
                 </tr>
                 <% } %>
@@ -82,57 +86,59 @@
         </table>
 
         <% } else { %>
-            <hr style="border-color: rgb(46, 115, 124);">
-            <br>
-            <form method="POST">
-                <div class="wrap">
-                    <div class="search">
-                        <input type="text" name="_id" class="searchTerm" placeholder="<%= items.myObject.busqueda %>">
-                        <a id="submit-form-link" href="#"></a>
-                        <button type="submit"class="spanColor searchButton">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </div>
+        <hr style="border-color: rgb(46, 115, 124);">
+        <br>
+        <form method="POST">
+            <div class="wrap">
+                <div class="search">
+                    <input type="text" name="_id" class="searchTerm" placeholder="<%= items.myObject.busqueda %>">
+                    <a id="submit-form-link" href="#"></a>
+                    <button type="submit" class="spanColor searchButton">
+                        <i class="fa fa-search"></i>
+                    </button>
                 </div>
-            </form>
-            <br><br>
-    
-            <% const  nombres_sz=  items.myObject.tablaMenu.nombres.length %>
-            <% const  nombres=  items.myObject.tablaMenu.nombres %>
-            <% const  docs_sz =   items.myDocs.length %>
-            <% const  docs =   items.myDocs %>
-         
-            <table class="table table-bordered table-striped table-hover table-sm">
-                <thead class="thead-dark">
-                    <tr>
-                        <% for (var i=0; i< nombres_sz; i++) { %>
-                        <th scope="col"><%= nombres[i] %></th>
-                        <% } %>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <% for (var i=0; i < docs_sz; i++) { %>
-                            <td> <%= docs[i]._id %> </td>
-                            <td> 
-                        <% for (var j=0; j < docs[i].dishes.length; j++) { %>
-                            <%=docs[i].dishes[j]._id%>  
-                            
-                            <% if( (j+1) < docs[i].dishes.length) {  %> 
-                                <%= "|   "  %>  
-                                <% } %>
-                      
-                        <% } %>
-                        <td><%= items.myNutrientsMenu[i][1] %> </td>
-                        <td>  
-                            <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> 
-                            
-                        </td>
-                    </tr>
+            </div>
+        </form>
+        <br><br>
+
+        <% const  nombres_sz=  items.myObject.tablaMenu.nombres.length %>
+        <% const  nombres=  items.myObject.tablaMenu.nombres %>
+        <% const  docs_sz =   items.myDocs.length %>
+        <% const  docs =   items.myDocs %>
+
+        <table class="table table-bordered table-striped table-hover table-sm">
+            <thead class="thead-dark">
+                <tr>
+                    <% for (var i=0; i< nombres_sz; i++) { %>
+                    <th scope="col"><%= nombres[i] %></th>
                     <% } %>
-                </tbody>
-            </table>
-            <% } %>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <% for (var i=0; i < docs_sz; i++) { %>
+                    <td> <%= docs[i]._id %> </td>
+                    <td>
+                        <% for (var j=0; j < docs[i].dishes.length; j++) { %>
+                        <%=docs[i].dishes[j]._id%>
+
+                        <% if( (j+1) < docs[i].dishes.length) {  %>
+                        <%= "|   "  %>
+                        <% } %>
+
+                        <% } %>
+                    <td><%= items.myNutrientsMenu[i][1] %> </td>
+                    <td>
+                        <button type="button" class="btn btn-info"><a title="Ver detalles"
+                                href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
+
+                    </td>
+                </tr>
+                <% } %>
+            </tbody>
+        </table>
+        <% } %>
+    
     </div>
     <%- include ("../partials/footer.ejs"); %>
 </body>
