--- a/views/recomendation/recomendationView.ejs
+++ b/views/recomendation/recomendationView.ejs
@@ -46,7 +46,7 @@
                 </div>
             </div>
         </form>
-        <br><br>
+        <br>
 
 
 
@@ -76,8 +76,8 @@
                        
                         <% } %>
                         <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/recomendation/delete/<%=items.myDocs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button><br> 
-                            <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/recomendation/<%=items.myDocs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> 
-                            <button type="button" class="btn btn-warning"><a title="Editar" href="/recomendation/update/<%=items.myDocs[i]['_id']%>"><i class="fas fa-edit"></i></a></button></td> 
+                            <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/recomendation/<%=items.myDocs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> <br> 
+                            <button type="button" class="btn btn-warning"><a title="Editar" href="/recomendation/update/<%=items.myDocs[i]['_id']%>"><i class="fas fa-edit"></i></a></button></td> <br> 
                         </td>
                     </tr>
                     <% } %>
