Cambios en css y usuarios

--- a/public/stylesheets/fondo2.css
+++ b/public/stylesheets/fondo2.css
@@ -1,6 +1,6 @@
 body {
     background-image:  url("../images/fondo2v2.png") !important;
-    /* background-position: 0cm; */
+    background-position: 0cm;
     background-repeat: no-repeat !important;
     background-position: center center !important;
     background-size: cover !important;
