--- a/public/stylesheets/dish.css
+++ b/public/stylesheets/dish.css
@@ -17,9 +17,9 @@ h1{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: bold;
   margin-top: 40px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   text-align: center;
-  font-size: 70px;
+  font-size: 3em;
   color: #0c0c0c;
   text-shadow: 3px 2px 2px rgb(100, 103, 104);
 }
