--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,8 +15,9 @@ body {
 }
 
 .jilorioInfo {
-  height: 50%;
-  width: 50%;
+  height: auto;
+  width: auto;
+  max-width: 40%;
   color: rgba(255, 255, 255, 0.897);
 
   padding: 10px 40px 15px 40px;
@@ -50,16 +51,17 @@ a:hover {
 
 .footer {
   position: absolute;
+  margin-top: 20px !important;
   bottom: 0;
   width: 100%;
-  height: 80px;
+  height: 120px;
   line-height: 60px;
   background-color: rgb(31, 37, 36);
   border-top: 2px solid rgba(172, 189, 186, 0.2);
 }
 
 .display-4 {
-  font-size: 3.5em;
+  font-size: 3em;
   font-weight: bold;
 }
 
@@ -200,7 +202,7 @@ h1 {
   font-weight: bold;
   margin-top: 40px;
   text-align: justify;
-  font-size: 4em;
+  font-size: 3.5em;
   color: #ffffff;
   text-shadow: 3px 2px 2px rgb(100, 103, 104);
 }
@@ -307,7 +309,7 @@ h1 {
 }
 
 .recomendation {
-  min-width: 420px;
+  min-width: auto;
   min-height: 250px;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
 }
@@ -326,7 +328,7 @@ h1 {
 }
 
 .evaluation {
-  min-width: 420px;
+  min-width: auto;
   min-height: 250px;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
 }
@@ -438,7 +440,7 @@ input {
 
 .table {
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 40px !important;
   border: 2px solid rgb(46, 115, 124);
 
   box-shadow: 5px 5px 5px 0px rgba(170, 167, 167, 0.6);
