--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -447,7 +447,7 @@ input {
 }
 
 
-@media only screen and (max-width: 400px) {
+@media (max-width: 400px) {
   .jilorioInfo {
     max-width: auto;
   }
