--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -175,13 +175,13 @@ nav {
 p {
   font-size: 1.1em;
   font-weight: 400;
-  display: block;
+  /* display: block;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   margin-block-start: 1em;
   margin-block-end: 1em;
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 1rem; */
 }
 
 .feature {
